# payout_service

./: .env.dev  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
app/: settings.py  settings_tests.py  urls.py
files/: Payout.postman_collection.json  Recipient.postman_collection.json
payouts/: admin.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
payouts/management/commands/: create_superuser.py
payouts/migrations/: 0001_initial.py  0002_load_data.py  0002_load_recipients.py
payouts/tests/: conftest.py  test_models.py  test_serializers.py  test_tasks.py  test_validators.py  test_views.py
