[project]
name = "payout-service"
version = "0.1.0"
description = "Сервис управления заявками на выплату"
requires-python = ">=3.12"

dependencies = [
    "Django==6.0",
    "djangorestframework==3.16.1",
    "celery==5.6.0",
    "redis==7.1.0",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "django-cors-headers==4.9.0",
    "django-celery-results==2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-mock==3.14.0",
    "ruff==0.14.9",
    "model-bakery==1.15.0"
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["payouts/tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = ["-v", "--tb=short"]
DJANGO_SETTINGS_MODULE = "app.settings"

[tool.coverage.run]
source = ["payouts"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM", "PLC", "PLE", "PLR", "PLW"]
ignore = ["E501"]
line-length = 100
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*.py" = ["S101"]
"migrations/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
